--- a/src/index.html
+++ b/src/index.html
@@ -11,13 +11,7 @@
 
     <script src="https://unpkg.com/react@16.8.4/umd/react.development.js"></script>
     <script src="https://unpkg.com/react-dom@16.8.4/umd/react-dom.development.js"></script>
-    <script>
-
-        // your code is going here, for now
-        const App = () => {
-
-        }
-    </script>
+    <script src="./app.js"></script>
 
 </body>
 </html>
